--- a/config/config_en_semcor+glosse_manual.yaml
+++ b/config/config_en_semcor+glosse_manual.yaml
@@ -1,15 +1,15 @@
 data:
   langs:
-    - en
-  #  lemma2synsetpath: /media/tommaso/My Book/factories/output/lemma2bnsynsets.wn_part.en.txt
+   - en
   test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
-    - data/training_data/en_training_data/semcor/semcor.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
-  sense_inventory: sensekey
-  label_from: sensekeys 
+    - data/training_data/en_training_data/semcor+princeton_glosses/semcor+princeton_glosses_manual.data.xml
+
   gold_id_separator: " "
-  outpath: data/models/en_semcor_sensekeys_full/
-  mfs_file: 
+  outpath: data/models/en_semcor_gloss_manual/
+  label_from: training
+  sense_inventory: sensekey
+  mfs_file: resources/mfs/mfs_wn.en.wnkeys.txt
   test_names:
     - senseval2
     - senseval3
@@ -25,7 +25,7 @@ data:
   max_segments_in_batch: 2000
 
 model:
-  device: cuda 
+  device: cuda
   model_name: bert-large-cased
   learning_rate: 1e-4
 
@@ -34,5 +34,5 @@ training:
 
 #wandb:
 #  tags:
+#    - en
 #    - bert-large-cased
-#    - sensekey
