--- a/config/config_en_semcor_sensekey_bert-base.yaml
+++ b/config/config_en_semcor_sensekey_bert-base.yaml
@@ -6,10 +6,10 @@ data:
   train_data_root:
     - data/training_data/en_training_data/semcor/semcor.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
   sense_inventory: sensekey
-  label_from: sensekeys 
+  label_from: training
   gold_id_separator: " "
-  outpath: data/models/en_semcor_sensekeys_full/
-  mfs_file: 
+  outpath: data/models/en_semcor_sensekeys_mfs/
+  mfs_file: resources/mfs/mfs_wn.en.wnkeys.txt
   test_names:
     - senseval2
     - senseval3
@@ -26,7 +26,7 @@ data:
 
 model:
   device: cuda 
-  model_name: bert-large-cased
+  model_name: bert-base-cased
   learning_rate: 1e-4
 
 training:
