--- a/config/config_es_s+g+o.yaml
+++ b/config/config_es_s+g+o.yaml
@@ -18,7 +18,7 @@ data:
   max_segments_in_batch: 2000
 
 model:
-  device: cuda 
+  device: cpu
   model_name: bert-base-multilingual-cased
   learning_rate: 1e-4
 
