--- a/config/config_en_semcor_sensekey.yaml
+++ b/config/config_en_semcor_sensekey.yaml
@@ -11,26 +11,27 @@ data:
   outpath: data/models/en_semcor_sensekeys_mfs/
   mfs_file: resources/mfs/mfs_wn.en.wnkeys.txt
   test_names:
-#    - senseval2
-#    - senseval3
+    - senseval2
+    - senseval3
     - semeval2007
-#    - semeval2007_coarse
+    - semeval2007_coarse
     - semeval2010
-#    - semeval2013
-#    - semeval2015
-#    - ALL
-#    - ALL_no_semeval2007
+    - semeval2013
+    - semeval2015
+    - ALL
+    - ALL_no_semeval2007
+  dev_name: semeval2007
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
 
 model:
-  device: cpu
+  device: cuda 
   model_name: bert-large-cased
   learning_rate: 1e-4
 
 training:
-  num_epochs: 40
+  num_epochs: 25 
 
 #wandb:
 #  tags:
