--- a/config/config_en_semcor_wnoffsets_training.bert-base.yaml
+++ b/config/config_en_semcor_wnoffsets_training.bert-base.yaml
@@ -27,7 +27,7 @@ data:
 
 model:
   device: cuda 
-  model_name: bert-large-cased
+  model_name: bert-base-cased
   learning_rate: 1e-4
 
 training:
