--- a/config/config_de_s+g+o.yaml
+++ b/config/config_de_s+g+o.yaml
@@ -17,7 +17,7 @@ data:
   max_segments_in_batch: 2000
 
 model:
-  device: cpu
+  device: cuda 
   model_name: bert-base-multilingual-cased
   learning_rate: 1e-4
 
