--- a/config/config_de_s+g+o.yaml
+++ b/config/config_de_s+g+o.yaml
@@ -1,16 +1,19 @@
 data:
   langs:
     - de 
-  test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
+      #test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
+  test_data_root: /home/tommaso/new_new_test/
   train_data_root:
     - data/training_data/multilingual_training_data/onesec+translated_semcor+babel_glosses/de/onesec_de+semcor_de+babelgloss_de.filter.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
   sense_inventory: babelnet
   label_from: training
   gold_id_separator: " "
   outpath: data/models/de_s+g+o
-  mfs_file:
+  mfs_file: resources/mfs/mfs_bn.de.bnids.txt
   test_names:
-    - semeval2013_de
+    - wiki_dev_de
+    - wiki_test_de
+      #- semeval2013_de_filter
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
