--- a/config/config_en_semcor+glosse_manual.wnoffsets.bert-large.yaml
+++ b/config/config_en_semcor+glosse_manual.wnoffsets.bert-large.yaml
@@ -3,11 +3,11 @@ data:
    - en
   test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
-    - data/training_data/en_training_data/semcor+princeton_glosses/semcor+princeton_glosses_manual.data.xml
+    - data2/training_data/en_training_data/semcor+princeton_glosses/semcor+princeton_glosses_manual.data.xml
 
   gold_id_separator: " "
-  outpath: data/models/en_semcor_gloss_manual_wnoffsets_training/
-  label_from: training
+  outpath: data/models/en_semcor_gloss_manual_wnoffsets_full/
+  label_from: wnoffsets
   sense_inventory: wnoffset 
   mfs_file: resources/mfs/mfs_wn.en.wnoffset.txt
   test_names:
@@ -21,8 +21,8 @@ data:
     - ALL
     - ALL_no_semeval2007
   dev_name: semeval2007
-  max_sentence_token: 30
-  sliding_window: 15
+  max_sentence_token: 200 
+  sliding_window: 200
   max_segments_in_batch: 2000
 
 model:
