--- a/config/config_de_s+g+o.yaml
+++ b/config/config_de_s+g+o.yaml
@@ -1,8 +1,7 @@
 data:
   langs:
     - de 
-      #test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
-  test_data_root: /home/tommaso/new_tests/
+  test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
     - data/training_data/multilingual_training_data/onesec+translated_semcor+babel_glosses/de/onesec_de+semcor_de+babelgloss_de.filter.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
   sense_inventory: babelnet
@@ -13,7 +12,7 @@ data:
   test_names:
     - wiki_dev_de
     - wiki_test_de
-      #- semeval2013_de_filter
+    - semeval2013_de
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
