--- a/config/config_es_s+g+o.yaml
+++ b/config/config_es_s+g+o.yaml
@@ -1,7 +1,7 @@
 data:
   langs:
     - es
-  test_data_root: /home/tommaso/new_tests/ #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
+  test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
     - data/training_data/multilingual_training_data/onesec+translated_semcor+babel_glosses/es/onesec_es+semcor_es+babelgloss_es.filter.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
   sense_inventory: babelnet
@@ -12,8 +12,8 @@ data:
   test_names:
     - wiki_dev_es
     - wiki_test_es
-    - semeval2013_es_filter
-    - semeval2015_es_filter
+    - semeval2013_es
+    - semeval2015_es
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
