--- a/config/config_it_s+g+o.yaml
+++ b/config/config_it_s+g+o.yaml
@@ -1,7 +1,7 @@
 data:
   langs:
     - it
-  test_data_root: /home/tommaso/new_tests/ # /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
+  test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
     - data/training_data/multilingual_training_data/onesec+translated_semcor+babel_glosses/it/onesec_it+semcor_it+babelgloss_it.filter.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
   sense_inventory: babelnet
@@ -12,8 +12,8 @@ data:
   test_names:
     - wiki_dev_it
     - wiki_test_it
-    - semeval2013_it_filter
-    - semeval2015_it_filter
+    - semeval2013_it
+    - semeval2015_it
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
