--- a/config/config_en_semcor+glosse_manual.wnoffsets.bert-large.yaml
+++ b/config/config_en_semcor+glosse_manual.wnoffsets.bert-large.yaml
@@ -7,7 +7,7 @@ data:
 
   gold_id_separator: " "
   outpath: data/models/en_semcor_gloss_manual_wnoffsets_full/
-  label_from: wnoffsets
+  label_from: training 
   sense_inventory: wnoffset 
   mfs_file: resources/mfs/mfs_wn.en.wnoffset.txt
   test_names:
