--- a/config/config_fr_onesec.yaml
+++ b/config/config_fr_onesec.yaml
@@ -10,9 +10,9 @@ data:
   outpath: data/models/fr_onesec
   mfs_file: resources/mfs/mfs_bn.fr.bnids.txt
   test_names:
-    - wiki_dev_fr
-    - wiki_test_fr
-    - semeval2013_fr
+    - wiki_dev_fr_wnfilter
+    - wiki_test_fr_wnfilter
+    - semeval2013_fr_wnfilter
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
