--- a/config/config_en_semcor+glosse_manual.zero-shot.yaml
+++ b/config/config_en_semcor+glosse_manual.zero-shot.yaml
@@ -15,18 +15,6 @@ data:
   sense_inventory: babelnet
   mfs_file: resources/mfs/mfs.zeroshot.bnid.txt
   test_names:
-    - senseval2
-    - senseval3
-    - semeval2007
-    - semeval2007_coarse
-    - semeval2010
-    - semeval2013
-    - semeval2015
-    - ALL
-    - ALL_no_semeval2007
-    - wiki_dev_it
-    - wiki_test_it
-    - semeval2013_it
 #    - senseval2
       #- senseval3
       #- semeval2007
@@ -36,20 +24,20 @@ data:
       #- semeval2015
       #- ALL
       #- ALL_no_semeval2007
-    - semeval2013_it
-    - wiki_dev_it
-    - wiki_test_it
-    - semeval2015_it
-    - wiki_dev_es
-    - wiki_test_es
-    - semeval2013_es
-    - semeval2015_es
-    - wiki_dev_fr
-    - wiki_test_fr
-    - semeval2013_fr
-    - wiki_dev_de
-    - wiki_test_de
-    - semeval2013_de
+    - wiki_dev_it_wnfilter
+    - wiki_test_it_wnfilter
+    - semeval2013_it_wnfilter
+    - semeval2015_it_wnfilter
+    - wiki_dev_es_wnfilter
+    - wiki_test_es_wnfilter
+    - semeval2013_es_wnfilter
+    - semeval2015_es_wnfilter
+    - wiki_dev_fr_wnfilter
+    - wiki_test_fr_wnfilter
+    - semeval2013_fr_wnfilter
+    - wiki_dev_de_wnfilter
+    - wiki_test_de_wnfilter
+    - semeval2013_de_wnfilter
   dev_name: semeval2007
   max_sentence_token: 30
   sliding_window: 15
