--- a/config/config_en_semcor_wnoffsets_full.yaml
+++ b/config/config_en_semcor_wnoffsets_full.yaml
@@ -4,7 +4,7 @@ data:
   #  lemma2synsetpath: /media/tommaso/My Book/factories/output/lemma2bnsynsets.wn_part.en.txt
   test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
-    - data/training_data/en_training_data/semcor/semcor.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
+    - data2/training_data/en_training_data/semcor/semcor.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
   sense_inventory: wnoffset 
   label_from: wnoffsets 
   gold_id_separator: " "
@@ -20,6 +20,8 @@ data:
     - semeval2015
     - ALL
     - ALL_no_semeval2007
+  dev_name: semeval2007
+
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
@@ -30,7 +32,8 @@ model:
   learning_rate: 1e-4
 
 training:
-  num_epochs: 40
+  num_epochs: 25
+  cache_instances: True
 
 #wandb:
 #  tags:
