--- a/config/config_en_semcor_wnoffsets_full_roberta.yaml
+++ b/config/config_en_semcor_wnoffsets_full_roberta.yaml
@@ -5,11 +5,11 @@ data:
   test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
     - data2/training_data/en_training_data/semcor/semcor.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
-  sense_inventory: sensekey
-  label_from: training
+  sense_inventory: wnoffset 
+  label_from: wnoffsets 
   gold_id_separator: " "
-  outpath: data/models/en_semcor_sensekeys_mfs/
-  mfs_file: resources/mfs/mfs_wn.en.wnkeys.txt
+  outpath: data/models/en_semcor_wnoffsets_full_mfs_roberta/
+  mfs_file: resources/mfs/mfs_wn.en.wnoffset.txt
   test_names:
     - senseval2
     - senseval3
@@ -21,19 +21,20 @@ data:
     - ALL
     - ALL_no_semeval2007
   dev_name: semeval2007
+
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
 
 model:
   device: cuda 
-  model_name: bert-large-cased
+  model_name: roberta-large
+ 
   learning_rate: 1e-4
 
 training:
   num_epochs: 25
   cache_instances: True
-
 
 #wandb:
 #  tags:
