--- a/config/config_en_semcor_wnoffsets_full_xlm.yaml
+++ b/config/config_en_semcor_wnoffsets_full_xlm.yaml
@@ -5,11 +5,11 @@ data:
   test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
     - data2/training_data/en_training_data/semcor/semcor.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
-  sense_inventory: sensekey
-  label_from: training
+  sense_inventory: wnoffset 
+  label_from: wnoffsets 
   gold_id_separator: " "
-  outpath: data/models/en_semcor_sensekeys_mfs/
-  mfs_file: resources/mfs/mfs_wn.en.wnkeys.txt
+  outpath: data/models/en_semcor_wnoffsets_full_xlm/
+#  mfs_file: resources/mfs/mfs_wn.en.wnoffset.txt
   test_names:
     - senseval2
     - senseval3
@@ -27,13 +27,13 @@ data:
 
 model:
   device: cuda 
-  model_name: bert-large-cased
+  model_name: xlm-mlm-en-2048
+#  model_name: roberta-large
   learning_rate: 1e-4
 
 training:
-  num_epochs: 25
+  num_epochs: 25 
   cache_instances: True
-
 
 #wandb:
 #  tags:
