--- a/config/config_de_onesec.yaml
+++ b/config/config_de_onesec.yaml
@@ -3,15 +3,15 @@ data:
     - de
   test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
-    - data2/training_data/multilingual_training_data/onesec/de/onesec.de.new_testset_instances.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
-  sense_inventory: babelnet
-  label_from: training
+    - data2/training_data/multilingual_training_data/onesec/de/onesec.de.test_set_lemmas.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
+  sense_inventory: bnoffsets 
+  label_from_training: False
   gold_id_separator: " "
-  outpath: data/models/de_onesec
+  outpath: data3/models/de_onesec
   mfs_file: resources/mfs/mfs_bn.de.bnids.txt
   test_names:
-    - wiki_dev_de_wnfilter
-    - wiki_test_de_wnfilter
+    - wiki_dev_de
+    - wiki_test_de
     - semeval2013_de_wnfilter
   max_sentence_token: 30
   sliding_window: 15
@@ -26,7 +26,7 @@ model:
 
 training:
   num_epochs: 25
-
+  cache_instances: True
 #wandb:
 #  tags:
 #    - en
