--- a/config/config_en_semcor+glosse_manual.wnoffsets.full.yaml
+++ b/config/config_en_semcor+glosse_manual.wnoffsets.full.yaml
@@ -1,15 +1,15 @@
 data:
   langs:
-   - en
+    - en
+  #  lemma2synsetpath: /media/tommaso/My Book/factories/output/lemma2bnsynsets.wn_part.en.txt
   test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
-    - data/training_data/en_training_data/semcor+princeton_glosses/semcor+princeton_glosses_manual.data.xml
-
+    - data2/training_data/en_training_data/semcor+princeton_glosses/semcor+princeton_glosses_manual.data.xml
+  sense_inventory: wnoffset 
+  label_from: wnoffsets 
   gold_id_separator: " "
-  outpath: data/models/en_semcor_gloss_manual_bert_large/
-  label_from: training
-  sense_inventory: sensekey
-  mfs_file: resources/mfs/mfs_wn.en.wnkeys.txt
+  outpath: data/models/en_semcor+wng_wnoffsets_full/
+  #mfs_file: resources/mfs/mfs_wn.en.wnoffset.txt
   test_names:
     - senseval2
     - senseval3
@@ -21,19 +21,21 @@ data:
     - ALL
     - ALL_no_semeval2007
   dev_name: semeval2007
+
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
 
 model:
-  device: cuda
-  model_name: bert-base-cased
+  device: cuda 
+  model_name: bert-large-cased
   learning_rate: 1e-4
 
 training:
   num_epochs: 25
+  cache_instances: True
 
 #wandb:
 #  tags:
-#    - en
 #    - bert-large-cased
+#    - sensekey
