--- a/config/config_fr_onesec.yaml
+++ b/config/config_fr_onesec.yaml
@@ -3,15 +3,15 @@ data:
     - fr
   test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
-    - data2/training_data/multilingual_training_data/onesec/fr/onesec.fr.new_testset_instances.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
-  sense_inventory: babelnet
-  label_from: training
+    - data2/training_data/multilingual_training_data/onesec/fr/onesec.fr.test_set_lemmas.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
+  sense_inventory: bnoffsets 
+  label_from_training: False
   gold_id_separator: " "
-  outpath: data/models/fr_onesec
+  outpath: data3/models/fr_onesec
   mfs_file: resources/mfs/mfs_bn.fr.bnids.txt
   test_names:
-    - wiki_dev_fr_wnfilter
-    - wiki_test_fr_wnfilter
+    - wiki_dev_fr
+    - wiki_test_fr
     - semeval2013_fr_wnfilter
   max_sentence_token: 30
   sliding_window: 15
@@ -26,6 +26,7 @@ model:
 
 training:
   num_epochs: 25
+  cache_instances: True
 
 #wandb:
 #  tags:
