--- a/config/config_it_onesec_original.yaml
+++ b/config/config_it_onesec_original.yaml
@@ -3,11 +3,11 @@ data:
     - it
   test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
-    - data2/training_data/multilingual_training_data/onesec/it/onesec.it.test_set_lemmas.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
-  sense_inventory: babelnet
-  label_from: bnids_manual
+    - data2/training_data/en_training_data/onesec_original_data/onesec_testset_instances/OneSeC_IT.data.xml #data2/training_data/multilingual_training_data/onesec/it/onesec.it.test_set_lemmas.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
+  sense_inventory: bnoffsets 
+  label_from_training: False
   gold_id_separator: " "
-  outpath: data3/models/it_onesec_manual_mapping
+  outpath: data3/models/it_onesec_original_manual_mapping
   mfs_file: resources/mfs/mfs_bn.it.bnids.txt
   test_names:
     - wiki_dev_it
