--- a/config/config_it_o+g.yaml
+++ b/config/config_it_o+g.yaml
@@ -3,17 +3,18 @@ data:
     - it
   test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
-    - data/training_data/multilingual_training_data/onesec+babel_glosses/it/onesec_it+babelgloss_it.filter.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
-  sense_inventory: babelnet
-  label_from: training
+    - data/training_data/multilingual_training_data/onesec/it/onesec_it.test_set_lemmas.data.xml
+    - data/training_data/multilingual_training_data/babel_glosses/it/glosses_it.test_set_lemmas.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
+  sense_inventory: bnoffsets
+  label_from_training: False
   gold_id_separator: " "
   outpath: data/models/it_o+g
   mfs_file: resources/mfs/mfs_bn.it.bnids.txt
   test_names:
     - wiki_dev_it
     - wiki_test_it
-    - semeval2013_it
-    - semeval2015_it
+    - semeval2013_it_wnfilter
+    - semeval2015_it_wnfilter
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
@@ -27,6 +28,7 @@ model:
 
 training:
   num_epochs: 25
+  cache_instances: True
 
 #wandb:
 #  tags:
