--- a/config/config_it_o+g.yaml
+++ b/config/config_it_o+g.yaml
@@ -1,14 +1,14 @@
 data:
   langs:
     - it
-  test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
+  test_data_root: /home/tommaso/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
-    - data/training_data/multilingual_training_data/onesec/it/onesec_it.test_set_lemmas.data.xml
-    - data/training_data/multilingual_training_data/babel_glosses/it/glosses_it.test_set_lemmas.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
+    - data/training_data/multilingual_training_data/onesec/it/onesec.it.test_set_lemmas.data.xml
+    - data/training_data/multilingual_training_data/babel_glosses/it/glosses_it.parsed.test_set_lemmas.data.xml
   sense_inventory: bnoffsets
   label_from_training: False
   gold_id_separator: " "
-  outpath: data/models/it_o+g
+  outpath: data2/models/it_o+g
   mfs_file: resources/mfs/mfs_bn.it.bnids.txt
   test_names:
     - wiki_dev_it
