--- a/config/config_it_s+g.yaml
+++ b/config/config_it_s+g.yaml
@@ -5,10 +5,10 @@ data:
   test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
     - data/training_data/multilingual_training_data/translated_semcor+babel_glosses/it/semcor_it+babelgloss_it.filter.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
-  sense_inventory: babelnet
-  label_from: training
+  sense_inventory: bnoffsets 
+  label_from_training: False
   gold_id_separator: " "
-  outpath: data/models/it_s+g
+  outpath: data2/models/it_s+g
   mfs_file: resources/mfs/mfs_bn.it.bnids.txt
   test_names:
     - wiki_dev_it
