--- a/config/config_de_o+g.yaml
+++ b/config/config_de_o+g.yaml
@@ -1,18 +1,19 @@
 data:
   langs:
     - de
-  test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
+  test_data_root: /home/tommaso/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
-    - data/training_data/multilingual_training_data/onesec+babel_glosses/de/onesec_de+babelgloss_de.filter.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
-  sense_inventory: babelnet
-  label_from: training
+    - data/training_data/multilingual_training_data/onesec/de/onesec.de.test_set_lemmas.data.xml
+    - data/training_data/multilingual_training_data/babel_glosses/de/glosses_de.parsed.test_set_lemmas.data.xml
+  sense_inventory: bnoffsets
+  label_from_training: False
   gold_id_separator: " "
-  outpath: data/models/de_o+g
+  outpath: data2/models/de_o+g
   mfs_file: resources/mfs/mfs_bn.de.bnids.txt
   test_names:
     - wiki_dev_de
     - wiki_test_de
-    - semeval2013_de
+    - semeval2013_de_wnfilter
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
@@ -26,6 +27,7 @@ model:
 
 training:
   num_epochs: 25
+  cache_instances: True
 
 #wandb:
 #  tags:
