--- a/config/config_fr_o+g.yaml
+++ b/config/config_fr_o+g.yaml
@@ -1,18 +1,19 @@
 data:
   langs:
-    - fr
-  test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
+    - fr 
+  test_data_root: /home/tommaso/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
-    - data/training_data/multilingual_training_data/onesec+babel_glosses/fr/onesec_fr+babelgloss_fr.filter.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
-  sense_inventory: babelnet
-  label_from: training
+    - data/training_data/multilingual_training_data/onesec/fr/onesec.fr.test_set_lemmas.data.xml
+    - data/training_data/multilingual_training_data/babel_glosses/fr/glosses_fr.parsed.test_set_lemmas.data.xml
+  sense_inventory: bnoffsets
+  label_from_training: False
   gold_id_separator: " "
-  outpath: data/models/fr_o+g
-  mfs_file: resources/mfs/mfs_bn.de.bnids.txt
+  outpath: data2/models/fr_o+g
+  mfs_file: resources/mfs/mfs_bn.fr.bnids.txt
   test_names:
     - wiki_dev_fr
     - wiki_test_fr
-    - semeval2013_fr
+    - semeval2013_fr_wnfilter
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
@@ -26,6 +27,7 @@ model:
 
 training:
   num_epochs: 25
+  cache_instances: True
 
 #wandb:
 #  tags:
