--- a/config/config_en_semcor_wnoffsets_full.bert-base-multilingual-cased.yaml
+++ b/config/config_en_semcor_wnoffsets_full.bert-base-multilingual-cased.yaml
@@ -8,17 +8,17 @@ data:
   sense_inventory: wnoffsets 
   label_from_training: False
   gold_id_separator: " "
-  outpath: data/models/en_semcor_wnoffsets_full/
+  outpath: data3/models/en_semcor_wnoffsets_full/
   #mfs_file: resources/mfs/mfs_wn.en.wnoffset.txt
   test_names:
-      #- senseval2
-      #- senseval3
+    - senseval2
+    - senseval3
     - semeval2007
     - semeval2007_coarse
     - semeval2010
-      #- semeval2013
-      #- semeval2015
-      #- ALL
+    - semeval2013
+    - semeval2015
+    - ALL
     - ALL_no_semeval2007
   dev_name: semeval2007
 
@@ -28,7 +28,7 @@ data:
 
 model:
   device: cuda 
-  model_name: bert-large-cased
+  model_name: bert-base-multilingual-cased
   learning_rate: 1e-4
 
 training:
