--- a/config/config_all_langs_s+g+o.yaml
+++ b/config/config_all_langs_s+g+o.yaml
@@ -5,44 +5,49 @@ data:
     - es
     - fr
     - de
-  test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
+  test_data_root: /home/tommaso/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
       #- data/training_data/multilingual_training_data/onesec+translated_semcor+babel_glosses/it/onesec_it+semcor_it+babelgloss_it.filter.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
-      - data2/training_data/en_training_data/semcor+princeton_glosses/semcor+princeton_glosses_manual.data.xml
-      - data2/training_data/multilingual_training_data/onesec/it/onesec.it.new_testset_instances.data.xml
-      - data2/training_data/multilingual_training_data/onesec/es/onesec.es.new_testset_instances.data.xml
-      - data2/training_data/multilingual_training_data/onesec/fr/onesec.fr.new_testset_instances.data.xml
-      - data2/training_data/multilingual_training_data/onesec/de/onesec.de.new_testset_instances.data.xml
-  sense_inventory: babelnet
-  label_from: bnids 
+      - data/training_data/en_training_data/semcor+princeton_glosses/semcor+princeton_glosses_manual.data.xml
+      - data/training_data/multilingual_training_data/onesec/it/onesec.it.test_set_lemmas.data.xml
+      - data/training_data/multilingual_training_data/onesec/es/onesec.es.test_set_lemmas.data.xml
+      - data/training_data/multilingual_training_data/onesec/fr/onesec.fr.test_set_lemmas.data.xml
+      - data/training_data/multilingual_training_data/onesec/de/onesec.de.test_set_lemmas.data.xml
+      - data/training_data/multilingual_training_data/translated_semcor/it/semcor.it.data.xml
+      - data/training_data/multilingual_training_data/translated_semcor/it/semcor.es.data.xml
+      - data/training_data/multilingual_training_data/translated_semcor/it/semcor.fr.data.xml
+      - data/training_data/multilingual_training_data/translated_semcor/it/semcor.de.data.xml
+
+  sense_inventory: bnoffsets 
+  label_from_training: False 
   gold_id_separator: " "
   outpath: data/models/all_semcor+onesec
-  mfs_file: resources/mfs/mfs.zeroshot.bnid.txt
+  #mfs_file: resources/mfs/mfs.zeroshot.bnid.txt
   lazy: True
   dev_name: semeval2007
   test_names:
-    - senseval2
-    - senseval3
+          #- senseval2
+          #- senseval3
     - semeval2007
-    - semeval2007_coarse
-    - semeval2010
-    - semeval2013
-    - semeval2015
-    - ALL
+      #- semeval2007_coarse
+      #- semeval2010
+      #- semeval2013
+      #- semeval2015
+      #- ALL
     - ALL_no_semeval2007
-    - wiki_dev_it_wnfilter
-    - wiki_test_it_wnfilter
+      #- wiki_dev_it_wnfilter
+      #- wiki_test_it_wnfilter
     - semeval2013_it_wnfilter
     - semeval2015_it_wnfilter
-    - wiki_dev_es_wnfilter
-    - wiki_test_es_wnfilter
+      #- wiki_dev_es_wnfilter
+      #- wiki_test_es_wnfilter
     - semeval2013_es_wnfilter
     - semeval2015_es_wnfilter
-    - wiki_dev_fr_wnfilter
-    - wiki_test_fr_wnfilter
+      #- wiki_dev_fr_wnfilter
+      #- wiki_test_fr_wnfilter
     - semeval2013_fr_wnfilter
-    - wiki_dev_de_wnfilter
-    - wiki_test_de_wnfilter
+      #- wiki_dev_de_wnfilter
+      #- wiki_test_de_wnfilter
     - semeval2013_de_wnfilter
   max_sentence_token: 30
   sliding_window: 15
@@ -55,6 +60,7 @@ model:
 
 training:
   num_epochs: 25 
+  cache_instances: True
 
 #wandb:
 #  tags:
