--- a/config/config_de_o+s.yaml
+++ b/config/config_de_o+s.yaml
@@ -1,23 +1,23 @@
 data:
   langs:
-    - it
-  test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
+    - de 
+  test_data_root: /home/tommaso/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
-    - data2/training_data/en_training_data/onesec_original_data/onesec_testset_instances/OneSeC_IT.data.xml
-    - data2/training_data/multilingual_training_data/translated_semcor/it/semcor.it.data.xml
+    - data/training_data/en_training_data/onesec_original_data/onesec_testset_instances/OneSeC_DE.data.xml
+    - data/training_data/multilingual_training_data/translated_semcor/de/semcor.de.data.xml
   sense_inventory: bnoffsets
   label_from_training: False
   gold_id_separator: " "
-  outpath: data3/models/it_o+s
-  mfs_file: resources/mfs/mfs_bn.it.bnids.txt
+  outpath: data2/models/de_o+s
+  mfs_file: resources/mfs/mfs_bn.de.bnids.txt
   test_names:
-    - wiki_dev_it
-    - wiki_test_it
-    - semeval2013_it_wnfilter
+    - wiki_dev_de
+    - wiki_test_de
+    - semeval2013_de_wnfilter
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
-  dev_name: wiki_dev_it
+  dev_name: wiki_dev_de
 
 
 model:
