--- a/config/config_es_o+s.yaml
+++ b/config/config_es_o+s.yaml
@@ -1,15 +1,15 @@
 data:
   langs:
     - es 
-  test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
+  test_data_root: /home/tommaso/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
-    - data2/training_data/en_training_data/onesec_original_data/onesec_testset_instances/OneSeC_ES.data.xml
-    - data2/training_data/multilingual_training_data/translated_semcor/es/semcor.es.data.xml
+    - data/training_data/en_training_data/onesec_original_data/onesec_testset_instances/OneSeC_ES.data.xml
+    - data/training_data/multilingual_training_data/translated_semcor/es/semcor.es.data.xml
   sense_inventory: bnoffsets
   label_from_training: False
   gold_id_separator: " "
-  outpath: data3/models/es_o+s
-  mfs_file: resources/mfs/mfs_bn.es.bnids.txt
+  outpath: data2/models/es_o+s
+  #mfs_file: resources/mfs/mfs_bn.es.bnids.txt
   test_names:
     - wiki_dev_es
     - wiki_test_es
