--- a/config/config_en_semcor+glosse_manual.NHS.zero-shot.yaml
+++ b/config/config_en_semcor+glosse_manual.NHS.zero-shot.yaml
@@ -10,7 +10,7 @@ data:
     - data2/training_data/en_training_data/semcor+princeton_glosses/semcor+princeton_glosses_manual.data.xml
 
   gold_id_separator: " "
-  outpath: data3/models/en_semcor_gloss_manual_zero_shot/
+  outpath: data3/models/en_semcor_gloss_manual_zero_shot_NHS/
   label_from_training: False 
   sense_inventory: bnoffsets 
   #mfs_file: resources/mfs/mfs.zeroshot.bnid.txt
@@ -38,6 +38,7 @@ data:
 model:
   device: cuda
   model_name: bert-base-multilingual-cased
+  model_path: /home/tommaso/Downloads/nhs_model/temp-output-dir-cosine_swahili/checkpoint-1110000/pytorch_model.bin
   learning_rate: 1e-4
 
 training:
