--- a/config/config_it_onesec.yaml
+++ b/config/config_it_onesec.yaml
@@ -1,23 +1,20 @@
 data:
   langs:
     - it
-  test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
+  test_data_root: /home/tommaso/dev/intellijWorkspace/babelnet_mapping_4.0/data/out/multilingual_wsd_v0.1.4 #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
   train_data_root:
-    - data2/training_data/multilingual_training_data/onesec/it/onesec.it.test_set_lemmas.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
+    - /home/tommaso/Documents/data/onesec_new/onesec.it.data.xml
   sense_inventory: bnoffsets
   label_from_training: False
   gold_id_separator: " "
-  outpath: data3/models/it_onesec_manual_mapping
-  mfs_file: resources/mfs/mfs_bn.it.bnids.txt
+  outpath: data3/models/it_onesec_new_framework
+  mfs_file: /home/tommaso/dev/intellijWorkspace/babelnet_mapping_4.0/data/out/multilingual_wsd_v0.1.5/inventory.it.sorted.withgold.txt
   test_names:
-    - wiki_dev_it
-    - wiki_test_it
-    - semeval2013_it_wnfilter
-    - semeval2015_it_wnfilter
+    - semeval2013-it
+      #- semeval2015-it
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
-  dev_name: wiki_dev_it
 
 
 model:
