--- a/config/config_it_onesec.yaml
+++ b/config/config_it_onesec.yaml
@@ -1,19 +1,19 @@
 data:
   langs:
     - it
-  test_data_root: /home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
+  test_data_root: /home/tommaso/onesec_new_multilingual/evaluation/
   train_data_root:
-    - data2/training_data/multilingual_training_data/onesec/it/onesec.it.test_set_lemmas.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
+    - /home/tommaso/onsec_new_multilingual/data/onesec.it.data.xml
   sense_inventory: bnoffsets
   label_from_training: False
   gold_id_separator: " "
-  outpath: data3/models/it_onesec_manual_mapping
-  mfs_file: resources/mfs/mfs_bn.it.bnids.txt
+  outpath: data/models/it_onesec_new_evaluation
+  mfs_file:
   test_names:
-    - wiki_dev_it
-    - wiki_test_it
-    - semeval2013_it_wnfilter
-    - semeval2015_it_wnfilter
+    - semeval2013-it
+    - semeval2015-it
+    - semeval2013-it-nasari
+    - semeval2015-it-nasari
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
