--- a/config/config_de_onesec.yaml
+++ b/config/config_de_onesec.yaml
@@ -1,32 +1,31 @@
 data:
   langs:
-    - de
-  test_data_root: /home/tommaso/WSD_Evaluation_Framework_2.0/Evaluation_Datasets/
+    - de 
+  test_data_root: /home/tommaso/onesec_new_multilingual/evaluation/
   train_data_root:
-    - data2/training_data/multilingual_training_data/onesec/de/onesec.de.test_set_lemmas.data.xml #/home/tommaso/Documents/data/WSD_Evaluation_Framework_2.0/Training_Corpora/
-  sense_inventory: bnoffsets 
+    - /home/tommaso/onesec_new_multilingual/data/onesec.de.data.xml
+  sense_inventory: bnoffsets
   label_from_training: False
   gold_id_separator: " "
-  outpath: data3/models/de_onesec
-  mfs_file: resources/mfs/mfs_bn.de.bnids.txt
+  outpath: data/models/de_onesec_new_evaluation
+  mfs_file:
   test_names:
-    - wiki_dev_de
-    - wiki_test_de
-    - semeval2013_de_wnfilter
+    - semeval2013-de
+    - semeval2013-de-nasari
   max_sentence_token: 30
   sliding_window: 15
   max_segments_in_batch: 2000
-  dev_name: wiki_dev_de
 
 
 model:
-  device: cuda 
+  device: cpu 
   model_name: bert-base-multilingual-cased
   learning_rate: 1e-4
 
 training:
   num_epochs: 25
   cache_instances: True
+
 #wandb:
 #  tags:
 #    - en
